add route for login et registration

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8081
 ## Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/valatMoslehGrodet
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=Antoine123
 
 ## Update Schema
 spring.jpa.hibernate.ddl-auto=update
