--- a/back/pom.xml
+++ b/back/pom.xml
@@ -62,7 +62,11 @@
 			<artifactId>p6spy-spring-boot-starter</artifactId>
 			<version>1.9.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
