--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
